Refactored basic stream support, prepared for other stream types (sockets, strings...)

--- a/org.lb.NLisp/org.lb.NLisp.csproj
+++ b/org.lb.NLisp/org.lb.NLisp.csproj
@@ -40,6 +40,7 @@
     <Compile Include="ConsCell.cs" />
     <Compile Include="LispFunctions.cs" />
     <Compile Include="LispObject.cs" />
+    <Compile Include="LispStream.cs" />
     <Compile Include="LispString.cs" />
     <Compile Include="NLisp.cs" />
     <Compile Include="Number.cs" />
